tests/ui/use/use-self-at-end.e2021.stderr
error: imports need to be explicitly named
  --> $DIR/use-self-at-end.rs:15:24
   |
LL |         pub use crate::self;
   |                        ^^^^
   |
help: try renaming it with a name
   |
LL |         pub use crate::self as name;
   |                             +++++++

error: imports need to be explicitly named
  --> $DIR/use-self-at-end.rs:17:25
   |
LL |         pub use crate::{self};
   |                         ^^^^
   |
help: try renaming it with a name
   |
LL |         pub use crate::{self as name};
   |                              +++++++

error: imports need to be explicitly named
  --> $DIR/use-self-at-end.rs:21:17
   |
LL |         pub use self;
   |                 ^^^^
   |
help: try renaming it with a name
   |
LL |         pub use self as name;
   |                      +++++++

error: imports need to be explicitly named
  --> $DIR/use-self-at-end.rs:23:18
   |
LL |         pub use {self};
   |                  ^^^^
   |
help: try renaming it with a name
   |
LL |         pub use {self as name};
   |                       +++++++

error: imports need to be explicitly named
  --> $DIR/use-self-at-end.rs:27:23
   |
LL |         pub use self::self;
   |                       ^^^^
   |
help: try renaming it with a name
   |
LL |         pub use self::self as name;
   |                            +++++++

error: imports need to be explicitly named
  --> $DIR/use-self-at-end.rs:30:24
   |
LL |         pub use self::{self};
   |                        ^^^^
   |
help: try renaming it with a name
   |
LL |         pub use self::{self as name};
   |                             +++++++

error: imports need to be explicitly named
  --> $DIR/use-self-at-end.rs:34:24
   |
LL |         pub use super::self;
   |                        ^^^^
   |
help: try renaming it with a name
   |
LL |         pub use super::self as name;
   |                             +++++++

error: imports need to be explicitly named
  --> $DIR/use-self-at-end.rs:37:25
   |
LL |         pub use super::{self};
   |                         ^^^^
   |
help: try renaming it with a name
   |
LL |         pub use super::{self as name};
   |                              +++++++

error: extern prelude cannot be imported
  --> $DIR/use-self-at-end.rs:50:17
   |
LL |         pub use ::self;
   |                 ^^^^^^

error: extern prelude cannot be imported
  --> $DIR/use-self-at-end.rs:54:17
   |
LL |         pub use ::self as crate4;
   |                 ^^^^^^^^^^^^^^^^

error: extern prelude cannot be imported
  --> $DIR/use-self-at-end.rs:56:20
   |
LL |         pub use ::{self};
   |                    ^^^^

error: extern prelude cannot be imported
  --> $DIR/use-self-at-end.rs:59:20
   |
LL |         pub use ::{self as crate5};
   |                    ^^^^^^^^^^^^^^

error: `self` in paths can only be used in start position or last position
  --> $DIR/use-self-at-end.rs:63:20
   |
LL |         pub use z::self::self;
   |                    ^^^^

error: `self` in paths can only be used in start position or last position
  --> $DIR/use-self-at-end.rs:64:20
   |
LL |         pub use z::self::self as z1;
   |                    ^^^^

error: `self` in paths can only be used in start position or last position
  --> $DIR/use-self-at-end.rs:65:21
   |
LL |         pub use z::{self::{self}};
   |                     ^^^^

error: `self` in paths can only be used in start position or last position
  --> $DIR/use-self-at-end.rs:66:21
   |
LL |         pub use z::{self::{self as z2}};
   |                     ^^^^

error[E0252]: the name `x` is defined multiple times
  --> $DIR/use-self-at-end.rs:43:28
   |
LL |         pub use crate::x::self;
   |                 -------------- previous import of the module `x` here
LL |         pub use crate::x::self as x3;
LL |         pub use crate::x::{self};
   |         -------------------^^^^--
   |         |                  |
   |         |                  `x` reimported here
   |         help: remove unnecessary import
   |
   = note: `x` must be defined only once in the type namespace of this module

error[E0252]: the name `Enum` is defined multiple times
  --> $DIR/use-self-at-end.rs:77:31
   |
LL |         pub use super::Enum::self;
   |                 ----------------- previous import of the type `Enum` here
LL |         pub use super::Enum::self as Enum1;
LL |         pub use super::Enum::{self};
   |         ----------------------^^^^--
   |         |                     |
   |         |                     `Enum` reimported here
   |         help: remove unnecessary import
   |
   = note: `Enum` must be defined only once in the type namespace of this module

error[E0252]: the name `Trait` is defined multiple times
  --> $DIR/use-self-at-end.rs:88:32
   |
LL |         pub use super::Trait::self;
   |                 ------------------ previous import of the trait `Trait` here
LL |         pub use super::Trait::self as Trait1;
LL |         pub use super::Trait::{self};
   |         -----------------------^^^^--
   |         |                      |
   |         |                      `Trait` reimported here
   |         help: remove unnecessary import
   |
   = note: `Trait` must be defined only once in the type namespace of this module

error[E0432]: unresolved import `super::Struct`
  --> $DIR/use-self-at-end.rs:69:24
   |
LL |         pub use super::Struct::self;
   |                        ^^^^^^ `Struct` is a struct, not a module

error[E0432]: unresolved import `super::Struct`
  --> $DIR/use-self-at-end.rs:70:24
   |
LL |         pub use super::Struct::self as Struct1;
   |                        ^^^^^^ `Struct` is a struct, not a module

error[E0432]: unresolved import `super::Struct`
  --> $DIR/use-self-at-end.rs:71:24
   |
LL |         pub use super::Struct::{self};
   |                        ^^^^^^ `Struct` is a struct, not a module

error[E0433]: `self` in paths can only be used in start position or last position
  --> $DIR/use-self-at-end.rs:92:24
   |
LL |         pub use super::self::y::z;
   |                        ^^^^ can only be used in path start position or last position

error[E0433]: `self` in paths can only be used in start position or last position
  --> $DIR/use-self-at-end.rs:93:24
   |
LL |         pub use super::self::y::z as z3;
   |                        ^^^^ can only be used in path start position or last position

error[E0433]: `self` in paths can only be used in start position or last position
  --> $DIR/use-self-at-end.rs:94:24
   |
LL |         pub use super::self::y::{z};
   |                        ^^^^ can only be used in path start position or last position

error[E0433]: `self` in paths can only be used in start position or last position
  --> $DIR/use-self-at-end.rs:95:24
   |
LL |         pub use super::self::y::{z as z4};
   |                        ^^^^ can only be used in path start position or last position

error[E0432]: unresolved import `super::Struct`
  --> $DIR/use-self-at-end.rs:72:24
   |
LL |         pub use super::Struct::{self as Struct2};
   |                        ^^^^^^ `Struct` is a struct, not a module

error[E0433]: `self` in paths can only be used in start position or last position
  --> $DIR/use-self-at-end.rs:62:21
   |
LL |         type G = z::self::self;
   |                     ^^^^ can only be used in path start position or last position

error[E0433]: `self` in paths can only be used in start position or last position
  --> $DIR/use-self-at-end.rs:91:25
   |
LL |         type K = super::self::y::z;
   |                         ^^^^ can only be used in path start position or last position

error[E0573]: expected type, found module `crate::self`
  --> $DIR/use-self-at-end.rs:14:18
   |
LL |         type A = crate::self;
   |                  ^^^^^^^^^^^ not a type

error[E0573]: expected type, found module `self`
  --> $DIR/use-self-at-end.rs:20:18
   |
LL |         type B = self;
   |                  ^^^^ not a type

error[E0573]: expected type, found module `self::self`
  --> $DIR/use-self-at-end.rs:26:18
   |
LL |         type C = self::self;
   |                  ^^^^^^^^^^ not a type

error[E0573]: expected type, found module `super::self`
  --> $DIR/use-self-at-end.rs:33:18
   |
LL |         type D = super::self;
   |                  ^^^^^^^^^^^ not a type

error[E0573]: expected type, found module `crate::x::self`
  --> $DIR/use-self-at-end.rs:40:18
   |
LL |         type E = crate::x::self;
   |                  ^^^^^^^^^^^^^^ not a type

error[E0425]: cannot find crate `self` in the list of imported crates
  --> $DIR/use-self-at-end.rs:46:20
   |
LL |         type F = ::self;
   |                    ^^^^ not found in the list of imported crates

error[E0223]: ambiguous associated type
  --> $DIR/use-self-at-end.rs:68:18
   |
LL |         type H = super::Struct::self;
   |                  ^^^^^^^^^^^^^^^^^^^
   |
help: if there were a trait named `Example` with associated type `self` implemented for `x::Struct`, you could use the fully-qualified path
   |
LL -         type H = super::Struct::self;
LL +         type H = <x::Struct as Example>::self;
   |

error[E0782]: expected a type, found a trait
  --> $DIR/use-self-at-end.rs:80:18
   |
LL |         type J = super::Trait::self;
   |                  ^^^^^^^^^^^^^^^^^^
   |
help: you can add the `dyn` keyword if you want a trait object
   |
LL |         type J = dyn super::Trait::self;
   |                  +++

error: aborting due to 37 previous errors

Some errors have detailed explanations: E0223, E0252, E0425, E0432, E0433, E0573, E0782.
For more information about an error, try `rustc --explain E0223`.
